--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,8 @@ section#login {
     transform: translate(-50%, -50%);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.493);
+    transition: width .2s, height .2s;
+    transition-timing-function: ease;
 }
 
 section#login >div#imagem {
