--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,7 +6,8 @@
     }
     
     section#login {
-        width: 90vw;
+        width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -28,6 +29,7 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
     
     section#login > div#imagem {
@@ -47,5 +49,6 @@
     
     div#form > p {
         font-size: 1.3em;
+        margin: 20px 0px;
     }
 }
