--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,11 +32,11 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.493);
     transition: width .2s, height .2s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login >div#imagem {
@@ -63,15 +63,41 @@ div#form > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+}
+
+div.campo > input {
+    background-color: #49a09d;
+    font-size: 1em;
+    width: calc(100% - 44px);
+    height: 110%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translate(46px, -44px);
+    outline: none;
+
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
 }
 
 form >input[type=submit] {
